samples/_failures_safe/1761077626_405169_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ebfbfecd.c: In function ‘main’:
./samples/SAFE/__tmp_ebfbfecd.c:165:9: error: expected expression at end of input
  165 |         if (
      |         ^~
./samples/SAFE/__tmp_ebfbfecd.c:165:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ebfbfecd.c:165:9: error: expected declaration or statement at end of input
